#42 fix Job 'deploy_to_production' requires 'request-testing      -', which is the name of 0 other jobs in workflow 'deploy'

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,4 +177,4 @@ workflows:
               only:
                 - master
           requires:
-            - request-testing      -
+            - request-testing
