#48 not related to ticket but changed start script for organization-ui, externalized NODE_ENV variable and moved configuration properties to json file

--- a/organization-ui/package.json
+++ b/organization-ui/package.json
@@ -6,7 +6,7 @@
   "main": "src/server.js",
   "scripts": {
     "build": "eslint --fix src && webpack -p",
-    "server": "NODE_ENV=dev nodemon index.js",
+    "server": "nodemon index.js",
     "start": "npm run build; npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
