--- a/organization-ui/.babelrc
+++ b/organization-ui/.babelrc
@@ -1,24 +1,6 @@
 {
   "presets": [
-    [ "env",
-      {
-        "modules": false,
-        "useBuiltIns": "usage"
-      }
-    ],
-    "react"
-  ],
-  "plugins": [
-    "transform-custom-element-classes",
-    "transform-es2015-modules-commonjs"
-  ],
-  "env": {
-    "test": {
-      "presets": ["react"],
-      "plugins": [
-        "transform-custom-element-classes",
-        "transform-es2015-modules-commonjs"
-      ]
-    }
-  }
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ]
 }
