--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,12 @@
 version: 2.1
 
 aliases:
+  peof_primary_image_aws: &peof_primary_image_aws
+    image: 332197038802.dkr.ecr.eu-central-1.amazonaws.com/peof-circleci
+    # set in CircleCI project environment variables
+    aws_auth:
+      aws_access_key_id: $AWS_ECR_ACCESS_KEY_ID
+      aws_secret_access_key: $AWS_ECR_SECRET_ACCESS_KEY
   peof_primary_image: &peof_primary_image
     image: paulvitic/peof-circleci:20190907101552
   peof_primary_nodejs_image: &peof_primary_nodejs_image
@@ -70,7 +76,7 @@ jobs:
           name: "build docker image from feature branch"
           command: |
             TAG="$(date +'%Y%m%d')"-"$(git rev-parse --short HEAD)"
-            echo $TAG
+            printenv
             cd ~/project/<< parameters.source_root >>
             source <(aws ecr get-login --region eu-central-1 --no-include-email)
             docker build -t 332197038802.dkr.ecr.eu-central-1.amazonaws.com/test-repository:${TAG} .
