#50 move to project directory before execting tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,9 @@ jobs:
       - run:
           name: "JavaScript Test Suite"
           # yarn here makes sure we are using the local jest binary
-          command: yarn jest -- --ci --testResultsProcessor="jest-junit"
+          command: |
+            cd ~/project/<< parameters.source_root >>
+            yarn jest -- --ci --testResultsProcessor="jest-junit"
           environment:
             JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
       - store_test_results:
