--- a/.circleci/images/primary/nodejs/Dockerfile
+++ b/.circleci/images/primary/nodejs/Dockerfile
@@ -62,6 +62,7 @@ RUN set -ex \
   && rm yarn-v$YARN_VERSION.tar.gz.asc yarn-v$YARN_VERSION.tar.gz
 
 RUN npm install -g eslint
+RUN npm install -g jest-junit
 RUN echo "=== finished Nodejs installation ==="
 
 USER circleci
