--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,8 +80,8 @@ jobs:
           command: |
             cd ~/project/<< parameters.source_root >>
             jest --ci --runInBand --reporters=default --reporters=jest-junit \
-              JEST_JUNIT_OUTPUT_DIR=~/project/<< parameters.source_root >>/reports/junit \
-              JEST_JUNIT_OUTPUT_NAME=js-test-results.xml
+              JEST_JUNIT_OUTPUT_DIR="~/project/<< parameters.source_root >>/reports/junit" \
+              JEST_JUNIT_OUTPUT_NAME="js-test-results.xml"
       #- run:
       #    name: "JavaScript Test Suite"
           # yarn here makes sure we are using the local jest binary
