--- a/organization-ui/package.json
+++ b/organization-ui/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/polyfill": "^7.6.0",
     "babel-loader": "^8.0.2",
     "eslint": "^6.1.0",
     "eslint-plugin-react": "^7.14.3",
